--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_gravity="center_horizontal"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <ImageView
+        android:layout_marginBottom="@dimen/vertical_margin"
+        android:src="@drawable/bat"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+android:layout_marginTop="@dimen/vertical_margin"
+        android:id="@+id/tvNickName"
+        android:layout_width="@dimen/login_field_width"
+        android:layout_height="@dimen/login_field_height"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/half_vertical_margin"
+        android:background="@drawable/shape_round_corners_light_blue"
+        android:gravity="center"
+        android:hint="@string/enter_your_nickname" />
+
+    <TextView
+        android:id="@+id/tvPassword"
+        android:layout_width="@dimen/login_field_width"
+        android:layout_height="@dimen/login_field_height"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/half_vertical_margin"
+        android:background="@drawable/shape_round_corners_light_blue"
+        android:gravity="center"
+        android:hint="@string/enter_your_password" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/half_vertical_margin">
+
+            <android.widget.Button
+                android:textColor="@color/white"
+                android:background="@drawable/shape_round_corners_blue"
+                android:id="@+id/bLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/login_field_height"
+                android:text="@string/sign_in"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvNotRegistered"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/big_margin"
+                android:text="@string/not_registered_ask"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bLogin" />
+
+            <android.widget.Button
+                android:background="@drawable/shape_grey_corners"
+                android:id="@+id/bSignUp1"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/login_field_height"
+                android:text="@string/sign_up"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvNotRegistered" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/clRegister"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tvProfession"
+                android:layout_width="@dimen/login_field_width"
+                android:layout_height="@dimen/login_field_height"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/vertical_margin"
+                android:background="@drawable/shape_round_corners_light_blue"
+                android:gravity="center"
+                android:hint="@string/enter_your_profession" />
+
+            <android.widget.Button
+                android:textColor="@color/white"
+                android:background="@drawable/shape_round_corners_blue"
+                android:id="@+id/bSignUp2"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/login_field_height"
+                android:layout_marginTop="@dimen/big_margin"
+                android:text="@string/sign_up"
+
+                />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    </FrameLayout>
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
