--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="half_vertical_margin">8dp</dimen>
     <dimen name="def_corner_radius">36dp</dimen>
     <dimen name="login_field_width">180dp</dimen>
+    <dimen name="appbar_layout_height">200dp</dimen>
 </resources>
