--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:background="@drawable/bat"
+            android:background="@drawable/ic_background"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/color_blue"
             app:title="jimi"
@@ -42,36 +42,42 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:text="Text.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets youText.app is a simple text editor for Chrome OS and Chrome. It's fast, lets you"
+                android:text="asd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
         </LinearLayout>
-
 
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_anchor="@id/bAppB"
         app:layout_anchorGravity="end|bottom"
         android:layout_margin="@dimen/vertical_margin"/>
 
     <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bAppB"
-        app:hideOnScroll="true"
-        app:fabAlignmentMode="center"
-        android:layout_gravity="bottom"
+        android:id="@+id/bottomAppbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-        //        app:menu="@menu/app_bar_menu"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:hideOnScroll="true">
 
-        <LinearLayout
-            android:background="@color/color_blue"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="50dp"
+            android:background="@drawable/ic_baseline_home_24" />
 
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="66dp"
+            android:background="@drawable/ic_baseline_settings_24"
+            android:backgroundTint="@color/fab_color" />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
 
