--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,7 @@
         app:layout_anchorGravity="center">
 
         <ImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/imgProfile"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_margin="32dp"
